feat: styled hero section

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,8 @@ select {
 /* Personal preferences */
 button {
     color: inherit;
+    border: 0;
+    cursor: pointer;
 }
 
 /* Custom properties */
@@ -180,6 +182,12 @@ button {
 
 .fs-500 {
     font-size: var(--fs-500);
+}
+
+.fs-900,
+.fs-800,
+.fs-700 {
+    line-height: 1.1;
 }
 
 .fs-400 {
@@ -463,6 +471,46 @@ button {
 
 /* Hero section */
 /* Remove these */
-main {
-    margin-block-start: 8rem !important;
+.hero {
+    position: relative;
+    overflow: clip;
+}
+
+.hero > div {
+    min-height: 100svh;
+    min-height: 100vh;
+    grid-template-columns: 2fr 1fr;
+    place-items: end;
+    padding-bottom: var(--space-2xl-3xl);
+    isolation: isolate;
+}
+
+.hero p {
+    max-width: 45ch;
+}
+
+.hero__image {
+    position: absolute;
+    inset: 0 0 0 auto;
+    z-index: 3;
+}
+
+@media (35em < width < 48.75em) {
+    .hero__image {
+        inset: var(--space-m) 0 0 0;
+        z-index: -1;
+    }
+}
+
+@media (width < 35em) {
+    .hero > div {
+        margin-top: 5rem;
+        grid-template-columns: 1fr;
+    }
+
+    .hero__image {
+        height: 100%;
+        object-fit: cover;
+        z-index: -1;
+    }
 }
