--- a/css/styles.css
+++ b/css/styles.css
@@ -700,6 +700,7 @@ button {
 .a11y-slider-prev {
     left: 1rem;
 }
+
 .a11y-slider-next {
     right: 1rem;
 }
@@ -721,4 +722,91 @@ button {
 
 .slider-pager.active {
     background-color: hsl(var(--clr-accent));
+}
+
+/* Team section */
+.team {
+    padding-block: var(--space-2xl-3xl);
+    background-color: hsl(var(--clr-secondary) / 0.05);
+}
+
+@media (width > 35em) {
+    .team > div > div:first-child {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+.team__consultants {
+    border-radius: 0.25rem;
+    height: 100%;
+    object-fit: cover;
+}
+
+.team__ability div:first-child {
+    justify-content: space-between;
+}
+
+.team__ability div:last-child {
+    min-height: 0.5rem;
+    background-color: hsl(var(--clr-secondary) / 0.25);
+    position: relative;
+    border-radius: 0.25rem;
+    overflow: clip;
+}
+
+.team__ability div:last-child::before {
+    content: "";
+    position: absolute;
+    inset: 0 auto 0 0;
+    background-color: hsl(var(--clr-accent));
+}
+
+.team__ability:nth-of-type(1) div:last-child::before {
+    width: 90%;
+}
+
+.team__ability:nth-of-type(2) div:last-child::before {
+    width: 85%;
+}
+
+.team__ability:nth-of-type(3) div:last-child::before {
+    width: 95%;
+}
+
+.team > div > div:nth-child(2) {
+    --flow-space: var(--space-2xl-3xl);
+
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+}
+
+.team__consultant {
+    background-color: hsl(var(--clr-secondary) / 0.05);
+    border-radius: 0.25rem;
+    overflow: clip;
+}
+
+.team__consultant div:nth-child(1) {
+    position: relative;
+}
+
+.team__consultant-socials {
+    position: absolute;
+    inset: auto 0 0 auto;
+    flex-direction: column;
+    transform: translateX(100%);
+    opacity: 0;
+    transition: transform 350ms ease-in, opacity 350ms ease-in;
+}
+
+.team__consultant:is(:hover, :focus-within) .team__consultant-socials {
+    transform: translateX(0%);
+    opacity: 1;
+}
+
+.team__consultant-socials svg {
+    width: 1rem;
+}
+
+.team__consultant div:nth-child(2) {
+    padding: var(--space-m);
 }
