fix: fixed the width of some images in team section

--- a/css/styles.css
+++ b/css/styles.css
@@ -789,6 +789,11 @@ button {
     position: relative;
 }
 
+.team__consultant-image {
+    width: 100%;
+    object-fit: cover;
+}
+
 .team__consultant-socials {
     position: absolute;
     inset: auto 0 0 auto;
